01-Fundamentals-and-Workload-Deployment/demos/globomantics-troubleshooting-labs/scenario-3-route-wrong-path/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: globomantics-website
  namespace: globomantics-wrong-route
spec:
  replicas: 1
  selector:
    matchLabels:
      app: globomantics-website
  template:
    metadata:
      labels:
        app: globomantics-website
    spec:
      containers:
        - name: website
          image: ghcr.io/rummens/pluralsight-globomantics-website:v3
          ports:
            - containerPort: 8080
