01-Fundamentals-and-Workload-Deployment/demos/globomantics-troubleshooting-labs/scenario-3-route-wrong-path/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: globomantics-website
  namespace: globomantics-wrong-route
spec:
  selector:
    app: globomantics-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: web
