01-Fundamentals-and-Workload-Deployment/demos/globomantics-troubleshooting-labs/scenario-3-route-wrong-path/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: globomantics-website
  namespace: globomantics-wrong-route
spec:
  path: /shop
  to:
    kind: Service
    name: globomantics-website
  port:
    targetPort: web
